<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/dialog_margin"
        android:layout_gravity="center">

        <EditText
            android:id="@+id/etContactName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/et_height"
            android:inputType="text"
            android:hint="@string/et_contact_name"
            android:textSize="@dimen/et_size"/>
        <EditText
            android:id="@+id/etContactNumber"
            android:layout_width="match_parent"
            android:layout_height="@dimen/et_height"
            android:inputType="number"
            android:hint="@string/et_contact_number"
            android:textSize="@dimen/et_size"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/dialog_margin"
        android:layout_gravity="center">
        <Button
            android:id="@+id/btSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_save"
            android:layout_weight="1"
            android:background="@drawable/custom_button"/>
        <Button
            android:id="@+id/btClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_close"
            android:layout_marginLeft="@dimen/bt_margin_left"
            android:layout_marginStart="@dimen/bt_margin_left"
            android:layout_weight="1"
            android:background="@drawable/custom_button"/>
    </LinearLayout>
</LinearLayout>