<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.emmalady.rikkeiandroidlesson7.activity.MainActivity"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.8">
            <android.support.v7.widget.RecyclerView
                android:id="@+id/rc_Content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_margin_vertical"
        android:layout_gravity="end">
        <Button
            android:id="@+id/btAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_add"
            android:layout_gravity="right|bottom"
            android:background="@drawable/custom_button_1"/>
        <Button
            android:id="@+id/btSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_switch"
            android:layout_gravity="bottom|right"
            android:layout_marginLeft="@dimen/bt_margin_left"
            android:layout_marginStart="@dimen/bt_margin_left"
            android:background="@drawable/custom_button_1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dialog_margin">
        <Button
            android:id="@+id/btDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_delete"
            android:layout_weight="1"
            android:layout_gravity="bottom"/>
        <Button
            android:id="@+id/btCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_cancel"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/bt_margin_left"
            android:layout_marginStart="@dimen/bt_margin_left"
            android:layout_gravity="bottom"/>
    </LinearLayout>
</LinearLayout>
